objects/ChartObject__c.object
<CustomObject>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Information__c</fullName>
        <label>More Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ChartObject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X__c</columns>
        <columns>Y__c</columns>
        <columns>Priority__c</columns>
        <columns>Impact__c</columns>
        <columns>More_Information__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ChartObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChartObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>